RESOLVED FIXED180210
Clear WebSWClientConnection in case storage process IPC connection is closing
https://bugs.webkit.org/show_bug.cgi?id=180210
Summary Clear WebSWClientConnection in case storage process IPC connection is closing
youenn fablet
Reported 2017-11-30 11:33:29 PST
Clear WebSWClientConnection in case storage process IPC connection is closing
Attachments
Patch (9.93 KB, patch)
2017-11-30 11:42 PST, youenn fablet
no flags
Patch (34.88 KB, patch)
2017-11-30 11:46 PST, youenn fablet
no flags
Patch (11.09 KB, patch)
2017-11-30 14:03 PST, youenn fablet
no flags
Patch for landing (11.06 KB, patch)
2017-12-01 09:27 PST, youenn fablet
no flags
youenn fablet
Comment 1 2017-11-30 11:42:51 PST
youenn fablet
Comment 2 2017-11-30 11:46:54 PST
Chris Dumez
Comment 3 2017-11-30 11:51:33 PST
Comment on attachment 328000 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=328000&action=review > Source/WebCore/ChangeLog:8 > + No chnage of behavior. typo: chnage. Also, this does not seem to be true as it should fix flaky crashes on the bots. > Source/WebCore/dom/Document.h:45 > +#include "SWClientConnection.h" Do we really have to include this here? We should try and minimize new header includes on Document.h as much as possible because of build times. > Source/WebKit/WebProcess/Storage/WebSWClientConnection.cpp:188 > + callback({ }); What about all the pending ServiceWorkerJobs? Shouldn't we reject their promises and clear m_scheduledJobs?
youenn fablet
Comment 4 2017-11-30 14:03:36 PST
Chris Dumez
Comment 5 2017-11-30 15:43:36 PST
Comment on attachment 328022 [details] Patch r=me
WebKit Commit Bot
Comment 6 2017-11-30 15:45:53 PST
Comment on attachment 328022 [details] Patch Rejecting attachment 328022 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-01', 'apply-attachment', '--no-update', '--non-interactive', 328022, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: Skipping patch. 1 out of 1 hunk ignored patching file Source/WebKit/WebProcess/Storage/WebSWClientConnection.cpp patching file Source/WebKit/WebProcess/Storage/WebSWClientConnection.h patching file Source/WebKit/WebProcess/Storage/WebToStorageProcessConnection.cpp patching file Source/WebKit/WebProcess/Storage/WebToStorageProcessConnection.h Failed to run "[u'/Volumes/Data/EWS/WebKit/Tools/Scripts/svn-apply', '--force', '--reviewer', u'Chris Dumez']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Full output: http://webkit-queues.webkit.org/results/5427171
youenn fablet
Comment 7 2017-12-01 09:27:43 PST
Created attachment 328101 [details] Patch for landing
WebKit Commit Bot
Comment 8 2017-12-01 10:31:53 PST
Comment on attachment 328101 [details] Patch for landing Clearing flags on attachment: 328101 Committed r225399: <https://trac.webkit.org/changeset/225399>
WebKit Commit Bot
Comment 9 2017-12-01 10:31:54 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 10 2017-12-01 10:34:00 PST
Note You need to log in before you can comment on or make changes to this bug.