Clear WebSWClientConnection in case storage process IPC connection is closing https://bugs.webkit.org/show_bug.cgi?id=180210

Patch by Youenn Fablet <youenn@apple.com> on 2017-12-01
Reviewed by Chris Dumez.

Source/WebCore:

No observable change of behavior.

* dom/Document.h: Keeping a ref since object may be deleted otherwise.

Source/WebKit:

Clear the sw connection maps when connection is closing.
Call related completion handlers for each connection.

* WebProcess/Storage/WebSWClientConnection.cpp:
(WebKit::WebSWClientConnection::connectionToServerLost):
* WebProcess/Storage/WebSWClientConnection.h:
* WebProcess/Storage/WebToStorageProcessConnection.cpp:
(WebKit::WebToStorageProcessConnection::didClose):
(WebKit::WebToStorageProcessConnection::idbConnectionToServerForSession):
(WebKit::WebToStorageProcessConnection::serviceWorkerConnectionForSession):
* WebProcess/Storage/WebToStorageProcessConnection.h:

Canonical link: https://commits.webkit.org/196248@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225399 268f45cc-cd09-0410-ab3c-d52691b4dbfc